Test programgen on examples (#105)
* Test codegen on examples

* Skip tests that don't work

* Compile check tests

* Include output

* Opt out of failing tests

* Add PULUMI_ACCEPT; remove version files

* Remove unused make clean section

* Make tests parallel

* Fix lint

* Unify CI and make lint

* Attempt local workflows

* Specify current sha

* Remove whitespace

* Root in GH workflows

* Root differently

* Maybe this will work?

* Remove version

* Remove live-test

* Restore test

* Setup other languages

* Setup other languages didn't work

* Also install node

* Specify yarn version

* clean yarn cache

* Handle dependencies

* Run synchronously

* Parallel for local tests

* Remove unnecessary files

* Generate PCL programs

* Remove go programgen testing

* Enable non-problematic go tests

* Experiment with soft failure

* Remove unused import

* Respect mutex

* Use issue api

* Remove soft

* Remove unused imports

* Move output to pkg/tests/examples_transpile

* Correctly exclude test files

* Ignore the correct files

* Ignore webserver-json

* Enable the webserver test

* Ensure PCL is valid

--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -8,9 +8,9 @@ on:
 
 jobs:
   lint:
-    uses: pulumi/pulumi-yaml/.github/workflows/stage-lint.yml@main
+    uses: ./.github/workflows/stage-lint.yml
   test:
-    uses: pulumi/pulumi-yaml/.github/workflows/stage-test.yml@main
+    uses: ./.github/workflows/stage-test.yml
     with:
       live-test: true
     secrets:
