--- a/.github/workflows/stage-test.yml
+++ b/.github/workflows/stage-test.yml
@@ -10,6 +10,21 @@ on:
         default: false
         required: false
         type: boolean
+      python-version:
+        description: 'Version of the Python toolchain for the build'
+        default: '3.9.x'
+        required: false
+        type: string
+      node-version:
+        description: 'Version of the Node toolchain for the build'
+        default: '14.x'
+        required: false
+        type: string
+      dotnet-version:
+        description: 'Version of the .NET toolchain for the build'
+        default: '3.1.x'
+        required: false
+        type: string
       commit-ref:
         description: Commit ref to check out and run tests against.
         default: ''
@@ -36,6 +51,7 @@ env:
   ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
   ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
   ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+  PULUMI_TEST_PARALLEL: false
 
 jobs:
   test:
@@ -51,6 +67,24 @@ jobs:
         with:
           go-version: ${{ matrix.go-version }}
           stable: ${{ matrix.go-stable }}
+      - name: Set up Python ${{ inputs.python-version }}
+        uses: actions/setup-python@v1
+        with:
+          python-version: ${{ inputs.python-version }}
+      - name: Install Python deps
+        run: |
+          python -m pip install --upgrade pip requests wheel urllib3 chardet
+      - name: Set up DotNet ${{ inputs.dotnet-version }}
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: ${{ inputs.dotnet-version }}
+      - name: Set up Node ${{ inputs.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ inputs.node-version }}
+      - name: Install yarn
+        run: |
+          npm install -g yarn@1.22
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         # Skip on dry-run
