--- a/examples/azure-container-apps/Pulumi.yaml
+++ b/examples/azure-container-apps/Pulumi.yaml
@@ -62,7 +62,7 @@ resources:
           username: ${adminUsername}
           password: ${adminPasswords[0].value}
   myImage:
-    type: docker:index/registryImage:RegistryImage
+    type: docker:RegistryImage
     properties:
       name: ${registry.loginServer}/node-app:v1.0.0
       build:
