--- a/examples/getting-started/Pulumi.yaml
+++ b/examples/getting-started/Pulumi.yaml
@@ -2,12 +2,12 @@ name: simple-yaml
 runtime: yaml
 resources:
   my-bucket:
-    type: aws:s3/bucket:Bucket
+    type: aws:s3:Bucket
     properties:
       website:
         indexDocument: index.html
   index.html:
-    type: aws:s3/bucketObject:BucketObject
+    type: aws:s3:BucketObject
     properties:
       bucket: ${my-bucket}
       source:
