--- a/examples/random/Pulumi.yaml
+++ b/examples/random/Pulumi.yaml
@@ -2,7 +2,7 @@ name: random
 runtime: yaml
 resources:
   randomPassword:
-    type: random:index/randomPassword:RandomPassword
+    type: random:RandomPassword
     properties:
       length: 16
       special: true
