--- a/examples/webserver/Pulumi.yaml
+++ b/examples/webserver/Pulumi.yaml
@@ -13,7 +13,7 @@ configuration:
 variables:
   ec2ami:
     Fn::Invoke:
-      Function: aws:index/getAmi:getAmi
+      Function: aws:getAmi
       Arguments:
         filters:
           - name: name
@@ -23,7 +23,7 @@ variables:
       Return: id
 resources:
   WebSecGrp:
-    type: aws:ec2/securityGroup:SecurityGroup
+    type: aws:ec2:SecurityGroup
     properties:
       ingress:
         - protocol: tcp
@@ -31,7 +31,7 @@ resources:
           toPort: 80
           cidrBlocks: ["0.0.0.0/0"]
   WebServer:
-    type: aws:ec2/instance:Instance
+    type: aws:ec2:Instance
     properties:
       instanceType: ${InstanceType}
       ami: ${ec2ami}
@@ -46,7 +46,7 @@ resources:
     properties:
       region: us-east-2
   MyBucket:
-    type: aws:s3/bucket:Bucket
+    type: aws:s3:Bucket
     options:
       provider: ${UsEast2Provider}
 outputs:
