feat: yaml-ify Fn::Join

--- a/pkg/pulumiyaml/testing/test/testdata/functions-pp/yaml/functions.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/functions-pp/yaml/functions.yaml
@@ -3,6 +3,7 @@ variables:
         Fn::ToBase64: haha business
     joined:
         Fn::Join:
-            - '-'
-            - - haha
-              - business
+            Delimiter: '-'
+            Values:
+                - haha
+                - business
