--- a/pkg/pulumiyaml/testing/test/testdata/join-template-pp/yaml/join-template.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/join-template-pp/yaml/join-template.yaml
@@ -4,12 +4,12 @@ resources:
         properties:
             name:
                 Fn::Join:
-                    -
-                    - - Fn::Select:
+                    Values:
+                        - Fn::Select:
                             - 0
                             - - foo
                               - bar
-                      - -policy
+                        - -policy
             path: /
             policy:
                 Fn::Select:
