feat: yaml-ify Fn::Split

--- a/pkg/pulumiyaml/testing/test/testdata/join-template-pp/yaml/join-template.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/join-template-pp/yaml/join-template.yaml
@@ -16,6 +16,6 @@ resources:
                 Fn::Select:
                     Values:
                         Fn::Split:
-                            - '-'
-                            - '{}-foo'
+                            Separator: '-'
+                            Value: '{}-foo'
                     Index: 0
