Give node compiler more heap
Tests were failing with OOM when trying to type check ts. My suspicion
is since some of our examples use multiple providers, the type-checking
surface area becomes very memory intensive.

--- a/.github/workflows/stage-test.yml
+++ b/.github/workflows/stage-test.yml
@@ -52,6 +52,7 @@ env:
   ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
   ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
   PULUMI_TEST_PARALLEL: false
+  NODE_OPTIONS: --max-old-space-size=3072
 
 jobs:
   test:
