Fix tests after pulumi/pulumi upgrade

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ bin/*
 # Other cannot be downloaded, as it does not correspond to a real package.
 !pkg/pulumiyaml/testing/test/testdata/other.json
 pkg/pulumiyaml/testing/test/testdata/*.json
+pkg/tests/transpiled_examples/**/tsconfig.json
 
 command-output/
 obj/
