Provide sections for the yaml template

--- a/templates/yaml/Pulumi.yaml
+++ b/templates/yaml/Pulumi.yaml
@@ -3,3 +3,8 @@ description: ${DESCRIPTION}
 runtime: yaml
 template:
   description: A minimal Pulumi YAML program
+
+configuration: {}
+variables:     {}
+resources:     {}
+outputs:       {}
