Add missing comments

--- a/templates/aws-native-yaml/Pulumi.yaml
+++ b/templates/aws-native-yaml/Pulumi.yaml
@@ -9,7 +9,9 @@ template:
       default: us-east-1
 
 resources:
+  # Create an AWS resource (S3 Bucket)
   bucket:
     type: aws-native:s3:Bucket
 outputs:
+  # Export the name of the bucket
   bucketName: ${bucket.id}
