--- a/templates/alicloud-yaml/Pulumi.yaml
+++ b/templates/alicloud-yaml/Pulumi.yaml
@@ -9,7 +9,9 @@ template:
       default: cn-beijing
 
 resources:
+  # Create an AliCloud resource (OSS Bucket)
   bucket:
     type: alicloud:oss:Bucket
 outputs:
+  # Export the name of the bucket
   bucketName: ${bucket.id}
