--- a/templates/aws-yaml/Pulumi.yaml
+++ b/templates/aws-yaml/Pulumi.yaml
@@ -10,7 +10,9 @@ template:
       default: us-east-1
 
 resources:
+  # Create an AWS resource (S3 Bucket)
   bucket:
     type: aws:s3:Bucket
 outputs:
+  # Export the name of the bucket
   bucketName: ${bucket.id}
