--- a/pkg/pulumiyaml/testing/test/testdata/aws-optionals-pp/yaml/aws-optionals.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/aws-optionals-pp/yaml/aws-optionals.yaml
@@ -1,6 +1,6 @@
 resources:
     example:
-        type: aws:iam/policy:Policy
+        type: aws:iam:Policy
         properties:
             name: example_policy
             path: /
@@ -8,7 +8,7 @@ resources:
 variables:
     policyDocument:
         Fn::Invoke:
-            Function: aws:iam/getPolicyDocument:getPolicyDocument
+            Function: aws:iam:getPolicyDocument
             Arguments:
                 statements:
                     - sid: 1
