--- a/pkg/pulumiyaml/testing/test/testdata/aws-resource-options-pp/yaml/aws-resource-options.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/aws-resource-options-pp/yaml/aws-resource-options.yaml
@@ -4,7 +4,7 @@ resources:
         properties:
             region: us-west-2
     bucket1:
-        type: aws:s3/bucket:Bucket
+        type: aws:s3:Bucket
         options:
             provider: ${provider}
             dependson:
