--- a/pkg/pulumiyaml/testing/test/testdata/join-template-pp/yaml/join-template.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/join-template-pp/yaml/join-template.yaml
@@ -1,6 +1,6 @@
 resources:
     example:
-        type: aws:iam/policy:Policy
+        type: aws:iam:Policy
         properties:
             name:
                 Fn::Join:
