--- a/pkg/pulumiyaml/testing/test/testdata/assets-archives-pp/yaml/assets-archives.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/assets-archives-pp/yaml/assets-archives.yaml
@@ -1,38 +1,38 @@
 resources:
     siteBucket:
-        type: aws:s3/bucket:Bucket
+        type: aws:s3:Bucket
     testFileAsset:
-        type: aws:s3/bucketObject:BucketObject
+        type: aws:s3:BucketObject
         properties:
             bucket: ${siteBucket.id}
             source:
                 Fn::FileAsset: file.txt
     testStringAsset:
-        type: aws:s3/bucketObject:BucketObject
+        type: aws:s3:BucketObject
         properties:
             bucket: ${siteBucket.id}
             source:
                 Fn::StringAsset: <h1>File contents</h1>
     testRemoteAsset:
-        type: aws:s3/bucketObject:BucketObject
+        type: aws:s3:BucketObject
         properties:
             bucket: ${siteBucket.id}
             source:
                 Fn::RemoteAsset: https://pulumi.test
     testFileArchive:
-        type: aws:s3/bucketObject:BucketObject
+        type: aws:s3:BucketObject
         properties:
             bucket: ${siteBucket.id}
             source:
                 Fn::FileArchive: file.tar.gz
     testRemoteArchive:
-        type: aws:s3/bucketObject:BucketObject
+        type: aws:s3:BucketObject
         properties:
             bucket: ${siteBucket.id}
             source:
                 Fn::RemoteArchive: https://pulumi.test/foo.tar.gz
     testAssetArchive:
-        type: aws:s3/bucketObject:BucketObject
+        type: aws:s3:BucketObject
         properties:
             bucket: ${siteBucket.id}
             source:
