fix: incorporate short name from upstream

--- a/pkg/pulumiyaml/testing/test/testdata/logical-name-pp/yaml/logical-name.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/logical-name-pp/yaml/logical-name.yaml
@@ -1,5 +1,5 @@
 resources:
     resourceLexicalName:
-        type: random:index/randomPet:RandomPet
+        type: random:RandomPet
 outputs:
     outputLexicalName: ${resourceLexicalName.id}
