--- a/.github/workflows/stage-test.yml
+++ b/.github/workflows/stage-test.yml
@@ -99,6 +99,11 @@ jobs:
           role-to-assume: ${{ secrets.AWS_CI_ROLE_ARN }}
       - name: Install Pulumi CLI
         uses: pulumi/action-install-pulumi-cli@v2
+      - name: Install Cue
+        uses: jaxxstorm/action-install-gh-release@v1.5.0
+        with:
+          repo: cue-lang/cue
+          version: v0.4.3
       - name: Fixup go.mod if we're not targeting 1.17x
         run: |
           if [ "${{ matrix.go-version }}" != "1.17.x" ]; then
