--- a/.github/workflows/stage-lint.yml
+++ b/.github/workflows/stage-lint.yml
@@ -15,10 +15,14 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v2
+      - name: Set up Go 1.18.x
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.18.x
       - name: Lint
-        # TODO: Enable linting after a cleanup commit.
-        # Avoiding in this commit so as to not mix code changes w/ CI changes.
-        run: make lint-golang
+        uses: golangci/golangci-lint-action@v3
+        with:
+          version: v1.46.2
   check-copyright:
     runs-on: ubuntu-latest
     steps:
@@ -28,7 +32,9 @@ jobs:
         uses: jaxxstorm/action-install-gh-release@v1.5.0
         with:
           repo: pulumi/pulumictl
+      - name: Set up Go 1.18.x
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.18.x
       - name: Lint
-        # TODO: Enable copyright checking after adding notices
-        # Avoiding in this commit so as to not mix code changes w/ CI changes.
         run: make lint-copyright
