--- a/.github/workflows/stage-test.yml
+++ b/.github/workflows/stage-test.yml
@@ -114,5 +114,5 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        go-version: [1.17.x, 1.18.x]
+        go-version: [1.19.x]
         go-stable: [true]
