--- a/.github/workflows/stage-lint.yml
+++ b/.github/workflows/stage-lint.yml
@@ -23,6 +23,14 @@ jobs:
         uses: golangci/golangci-lint-action@v3
         with:
           version: v1.46.2
+      - run: go mod tidy
+      - name: Fail if god mod not tidy
+        run: |
+          if [ -n "$(git status --porcelain)" ]; then
+            echo "::error go.mod not tidy"
+            exit 1
+          fi
+
   check-copyright:
     runs-on: ubuntu-latest
     steps:
