--- a/.github/workflows/stage-lint.yml
+++ b/.github/workflows/stage-lint.yml
@@ -44,5 +44,9 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: 1.18.x
+      - name: Set up Go 1.19.x
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.19.x
       - name: Lint
         run: make lint-copyright
