--- a/.github/workflows/stage-lint.yml
+++ b/.github/workflows/stage-lint.yml
@@ -20,10 +20,9 @@ jobs:
         with:
           go-version: 1.19.x
       - name: Lint
-        uses: golangci/golangci-lint-action@v3
-        with:
-          version: latest
-          skip-cache: true
+        run: |
+          go install github.com/golangci/golangci-lint/cmd/golangci-lint@1.49.0
+          make lint-golang
       - run: go mod tidy
       - name: Fail if god mod not tidy
         run: |
