--- a/examples/stackreference-consumer/Pulumi.yaml
+++ b/examples/stackreference-consumer/Pulumi.yaml
@@ -1,9 +1,8 @@
 name: stackreference-consumer
 runtime: yaml
-resources:
-  stackRef:
-    type: pulumi:pulumi:StackReference
-    properties:
+outputs:
+  referencedImageName:
+    Fn::StackReference:
       # These are placeholders that our test environment replaces.
       #
       # If you're using this sample:
@@ -11,6 +10,5 @@ resources:
       # * Stack name is determined when you run "pulumi up" for the first time, such as "dev"
       #
       # So you might use "alice/infra-project-name/dev", as an example.
-      name: PLACEHOLDER_ORG_NAME/stackreference-producer/PLACEHOLDER_STACK_NAME
-outputs:
-  referencedImageName: ${stackRef.outputs["imageName"]}
+      - PLACEHOLDER_ORG_NAME/stackreference-producer/PLACEHOLDER_STACK_NAME
+      - imageName
