Fix mistyped tests

--- a/pkg/pulumiyaml/testing/test/testdata/aws-lambda-pp/yaml/aws-lambda.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/aws-lambda-pp/yaml/aws-lambda.yaml
@@ -1,6 +1,8 @@
 resources:
   iamForLambda:
     type: aws:iam:Role
+    properties:
+      assumeRolePolicy: canBeAString
   testLambda:
     type: aws:lambda:Function
     properties:
