Modify examples and tests

--- a/examples/aws-eks/Pulumi.yaml
+++ b/examples/aws-eks/Pulumi.yaml
@@ -3,17 +3,17 @@ runtime: yaml
 description: An EKS cluster
 variables:
   vpcId:
-    Fn::Invoke:
-      Function: aws:ec2:getVpc
-      Arguments:
+    fn::invoke:
+      function: aws:ec2:getVpc
+      arguments:
         default: true
-      Return: id
+      return: id
   subnetIds:
-    Fn::Invoke:
-      Function: aws:ec2:getSubnetIds
-      Arguments:
+    fn::invoke:
+      function: aws:ec2:getSubnetIds
+      arguments:
         vpcId: ${vpcId}
-      Return: ids
+      return: ids
 resources:
   cluster:
     type: eks:Cluster
