--- a/pkg/pulumiyaml/testing/test/testdata/assets-archives-pp/yaml/assets-archives.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/assets-archives-pp/yaml/assets-archives.yaml
@@ -7,61 +7,61 @@ resources:
       bucket: ${siteBucket.id}
       # Reference the s3.Bucket object
       source:
-        Fn::FileAsset: file.txt
+        fn::FileAsset: file.txt
   testStringAsset:
     type: aws:s3:BucketObject
     properties:
       bucket: ${siteBucket.id}
       # Reference the s3.Bucket object
       source:
-        Fn::StringAsset: <h1>File contents</h1>
+        fn::StringAsset: <h1>File contents</h1>
   testRemoteAsset:
     type: aws:s3:BucketObject
     properties:
       bucket: ${siteBucket.id}
       # Reference the s3.Bucket object
       source:
-        Fn::RemoteAsset: https://pulumi.test
+        fn::RemoteAsset: https://pulumi.test
   testFileArchive:
     type: aws:s3:BucketObject
     properties:
       bucket: ${siteBucket.id}
       # Reference the s3.Bucket object
       source:
-        Fn::FileArchive: file.tar.gz
+        fn::FileArchive: file.tar.gz
   testRemoteArchive:
     type: aws:s3:BucketObject
     properties:
       bucket: ${siteBucket.id}
       # Reference the s3.Bucket object
       source:
-        Fn::RemoteArchive: https://pulumi.test/foo.tar.gz
+        fn::RemoteArchive: https://pulumi.test/foo.tar.gz
   testAssetArchive:
     type: aws:s3:BucketObject
     properties:
       bucket: ${siteBucket.id}
       # Reference the s3.Bucket object
       source:
-        Fn::AssetArchive:
+        fn::AssetArchive:
           file.txt:
-            Fn::FileAsset: file.txt
+            fn::FileAsset: file.txt
           string.txt:
-            Fn::StringAsset: <h1>File contents</h1>
+            fn::StringAsset: <h1>File contents</h1>
           remote.txt:
-            Fn::RemoteAsset: https://pulumi.test
+            fn::RemoteAsset: https://pulumi.test
           file.tar:
-            Fn::FileArchive: file.tar.gz
+            fn::FileArchive: file.tar.gz
           remote.tar:
-            Fn::RemoteArchive: https://pulumi.test/foo.tar.gz
+            fn::RemoteArchive: https://pulumi.test/foo.tar.gz
           .nestedDir:
-            Fn::AssetArchive:
+            fn::AssetArchive:
               file.txt:
-                Fn::FileAsset: file.txt
+                fn::FileAsset: file.txt
               string.txt:
-                Fn::StringAsset: <h1>File contents</h1>
+                fn::StringAsset: <h1>File contents</h1>
               remote.txt:
-                Fn::RemoteAsset: https://pulumi.test
+                fn::RemoteAsset: https://pulumi.test
               file.tar:
-                Fn::FileArchive: file.tar.gz
+                fn::FileArchive: file.tar.gz
               remote.tar:
-                Fn::RemoteArchive: https://pulumi.test/foo.tar.gz
+                fn::RemoteArchive: https://pulumi.test/foo.tar.gz
