--- a/pkg/pulumiyaml/testing/test/testdata/aws-s3-folder-pp/yaml/aws-s3-folder.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/aws-s3-folder-pp/yaml/aws-s3-folder.yaml
@@ -1,33 +1,33 @@
 resources:
-    siteBucket:
-        type: aws:s3/bucket:Bucket
-        properties:
-            website:
-                indexDocument: index.html
-    files:
-        type: aws:s3/bucketObject:BucketObject
-        properties:
-            bucket: ${siteBucket.id}
-            key: ${range.value}
-            source:
-                Fn::FileAsset: ${siteDir}/${range.value}
-            contentType: ${range.value}
-    bucketPolicy:
-        type: aws:s3/bucketPolicy:BucketPolicy
-        properties:
-            bucket: ${siteBucket.id}
-            policy:
-                Fn::ToJSON:
-                    Version: 2012-10-17
-                    Statement:
-                        - Effect: Allow
-                          Principal: '*'
-                          Action:
-                            - s3:GetObject
-                          Resource:
-                            - arn:aws:s3:::${siteBucket.id}/*
+  siteBucket:
+    type: aws:s3/bucket:Bucket
+    properties:
+      website:
+        indexDocument: index.html
+  files:
+    type: aws:s3/bucketObject:BucketObject
+    properties:
+      bucket: ${siteBucket.id}
+      key: ${range.value}
+      source:
+        fn::fileAsset: ${siteDir}/${range.value}
+      contentType: ${range.value}
+  bucketPolicy:
+    type: aws:s3/bucketPolicy:BucketPolicy
+    properties:
+      bucket: ${siteBucket.id}
+      policy:
+        fn::toJSON:
+          Version: 2012-10-17
+          Statement:
+            - Effect: Allow
+              Principal: "*"
+              Action:
+                - s3:GetObject
+              Resource:
+                - arn:aws:s3:::${siteBucket.id}/*
 variables:
-    siteDir: www
+  siteDir: www
 outputs:
-    bucketName: ${siteBucket.bucket}
-    websiteUrl: ${siteBucket.websiteEndpoint}
+  bucketName: ${siteBucket.bucket}
+  websiteUrl: ${siteBucket.websiteEndpoint}
