--- a/pkg/pulumiyaml/testing/test/testdata/functions-pp/yaml/functions.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/functions-pp/yaml/functions.yaml
@@ -1,8 +1,8 @@
 variables:
   encoded:
-    Fn::ToBase64: haha business
+    fn::toBase64: haha business
   joined:
-    Fn::Join:
+    fn::join:
       - '-'
       - - haha
         - business
