--- a/examples/getting-started/Pulumi.yaml
+++ b/examples/getting-started/Pulumi.yaml
@@ -11,7 +11,7 @@ resources:
     properties:
       bucket: ${my-bucket}
       source:
-        Fn::StringAsset: <h1>Hello, world!</h1>
+        fn::stringAsset: <h1>Hello, world!</h1>
       acl: public-read
       contentType: text/html
 outputs:
