--- a/examples/webserver/Pulumi.yaml
+++ b/examples/webserver/Pulumi.yaml
@@ -7,15 +7,15 @@ configuration:
     default: t3.micro
 variables:
   ec2ami:
-    Fn::Invoke:
-      Function: aws:getAmi
-      Arguments:
+    fn::invoke:
+      function: aws:getAmi
+      arguments:
         filters:
           - name: name
             values: ["amzn-ami-hvm-*-x86_64-ebs"]
         owners: ["137112412989"]
         mostRecent: true
-      Return: id
+      return: id
 resources:
   WebSecGrp:
     type: aws:ec2:SecurityGroup
