--- a/pkg/pulumiyaml/testing/test/testdata/aws-lambda-pp/yaml/aws-lambda.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/aws-lambda-pp/yaml/aws-lambda.yaml
@@ -7,7 +7,7 @@ resources:
     type: aws:lambda:Function
     properties:
       code:
-        Fn::FileArchive: lambda_function_payload.zip
+        fn::FileArchive: lambda_function_payload.zip
       role: ${iamForLambda.arn}
       handler: index.test
       runtime: nodejs12.x
