--- a/pkg/pulumiyaml/testing/test/testdata/aws-optionals-pp/yaml/aws-optionals.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/aws-optionals-pp/yaml/aws-optionals.yaml
@@ -7,7 +7,7 @@ resources:
       policy: ${policyDocument.json}
 variables:
   policyDocument:
-    Fn::Invoke:
+    fn::invoke:
       Function: aws:iam:getPolicyDocument
       Arguments:
         statements:
