--- a/pkg/pulumiyaml/testing/test/testdata/aws-optionals-pp/yaml/aws-optionals.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/aws-optionals-pp/yaml/aws-optionals.yaml
@@ -11,7 +11,7 @@ variables:
       Function: aws:iam:getPolicyDocument
       Arguments:
         statements:
-          - sid: 1
+          - sid: '1'
             actions:
               - s3:ListAllMyBuckets
               - s3:GetBucketLocation
