--- a/pkg/pulumiyaml/testing/test/testdata/direct-invoke-pp/yaml/direct-invoke.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/direct-invoke-pp/yaml/direct-invoke.yaml
@@ -9,7 +9,7 @@ resources:
           Function: aws:iam:getPolicyDocument
           Arguments:
             statements:
-              - sid: 1
+              - sid: '1'
                 actions:
                   - s3:ListAllMyBuckets
                   - s3:GetBucketLocation
