Generate numbers as strings when appropriate (#363)
* Upgrade to pu/pu 3.42.0

* Quote strings when necessary

* CL

* Regnerate tests

* Upgrade to master to get tests passing

* Accomidate new tests

--- a/pkg/pulumiyaml/testing/test/testdata/functions-pp/yaml/functions.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/functions-pp/yaml/functions.yaml
@@ -1,8 +1,18 @@
+resources:
+  bucket:
+    type: aws:s3:Bucket
 variables:
   encoded:
     fn::toBase64: haha business
+  decoded:
+    fn::fromBase64: ${encoded}
   joined:
     fn::join:
       - '-'
-      - - haha
-        - business
+      - - ${encoded}
+        - ${decoded}
+        - '2'
+  encoded2:
+    fn::toBase64: ${bucket.id}
+  decoded2:
+    fn::fromBase64: ${bucket.id}
