--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -3,3 +3,8 @@ pulumi/pulumi:
     dest: pkg/codegen/testing/test/testdata/transpiled_examples
     exclude: |
       .gitignore
+pulumi/pulumi-java:
+  - source: pkg/tests/transpiled_examples
+    dest: pkg/codegen/testing/test/testdata/transpiled_examples
+    exclude: |
+      .gitignore
