Set version as not current on sync

--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -21,3 +21,8 @@ jobs:
           COMMIT_PREFIX: "(pulumi-bot)"
           PR_LABELS: |
             impact/no-changelog-required
+          # Forces examples to regenerate in pulumi/pulumi
+          version-set: |
+            {
+              "name": "not-current"
+            }
