Update test results
Changes:

kubernetes-pod.pp introduces a new field, which is reflected in
kubernetes-pod.yaml

python-regress-10914 includes a invoke, which is normally run during our
tests. The invoke fails for lack of AWS credentials, so we omit running
the file from testing. The generated file is correct.

--- a/pkg/pulumiyaml/testing/test/testdata/kubernetes-pod-pp/yaml/kubernetes-pod.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/kubernetes-pod-pp/yaml/kubernetes-pod.yaml
@@ -11,6 +11,8 @@ resources:
         containers:
           - name: nginx
             image: nginx:1.14-alpine
+            ports:
+              - containerPort: 80
             resources:
               limits:
                 memory: 20Mi
