Update examples and test files to use config

--- a/examples/azure-app-service/Pulumi.yaml
+++ b/examples/azure-app-service/Pulumi.yaml
@@ -1,9 +1,9 @@
 name: azure-app-service
 runtime: yaml
 description: A static website hosted on AWS S3
-configuration:
+config:
   sqlAdmin:
-    type: String
+    type: string
     default: pulumi
 variables:
   blobAccessToken:
