--- a/examples/webserver/Pulumi.yaml
+++ b/examples/webserver/Pulumi.yaml
@@ -1,9 +1,9 @@
 name: webserver
 runtime: yaml
 description: Basic example of an AWS web server accessible over HTTP
-configuration:
+config:
   InstanceType:
-    type: String
+    type: string
     default: t3.micro
 variables:
   ec2ami:
