--- a/.github/workflows/stage-lint.yml
+++ b/.github/workflows/stage-lint.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: 1.19.x
-      - run: go mod tidy
+      - run: go mod tidy -compat=1.17
       - name: Fail if god mod not tidy
         run: |
           if [ -n "$(git status --porcelain)" ]; then
