Resolve awsx error by adding assignPublicIp

--- a/examples/awsx-fargate/Pulumi.yaml
+++ b/examples/awsx-fargate/Pulumi.yaml
@@ -8,6 +8,7 @@ resources:
   nginx:
     type: awsx:ecs:FargateService
     properties:
+      assignPublicIp: true
       cluster: ${cluster.arn}
       taskDefinitionArgs:
         container:
