PULUMI_ACCEPT=1 go test to accept golden test changes

--- a/pkg/pulumiyaml/testing/test/testdata/logical-name-pp/yaml/logical-name.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/logical-name-pp/yaml/logical-name.yaml
@@ -10,3 +10,7 @@ resources:
       prefix: ${configLexicalName}
 outputs:
   "bB-Beta_beta.\U0001F49C⁉": ${resourceLexicalName.id}
+  # New format for output logical name because outputs don't have separate logical names. Even nodejs which just
+  # // does "export" normally for outputs needs that export _to be_ the output name and so if the "logical name"
+  # // isn't a valid nodejs export we have to output it differently.
+  "dD-Delta_delta.\U0001F525⁉": ${resourceLexicalName.id}
