Adjust to the new version of websiteUrl from aws-native

--- a/examples/aws-static-website/Pulumi.yaml
+++ b/examples/aws-static-website/Pulumi.yaml
@@ -36,4 +36,4 @@ resources:
       version: 5.16.2
 outputs:
   bucketName: ${site-bucket.bucketName}
-  websiteUrl: ${site-bucket.websiteURL}
+  websiteUrl: ${site-bucket.websiteUrl}
